app/assets/stylesheets/one-stop-shop.css
.flex-container {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -ms-flex-direction: row;
    flex-direction: row;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    justify-content: flex-start;
    padding: 0 15px;
}

.tile {
    flex-grow: 0;
    flex-basis: 100%;
    margin-bottom: 2em;
    border: 1px solid #dee0e2;
    background: #f3f2f1;
}

/* Dynamic spinner for please-wait page within file upload journey */
.processing-wheel-loader {
    border: 12px solid #DEE0E2;
    border-radius: 50%;
    border-top-color: #005EA5;
    width: 50px;
    height: 50px;
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
}

#processing-wheel {
    margin-top: -75px;
}

@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* End of dynamic spinner */

@media screen and (min-width: 600px) and (max-width: 900px) {
    .tile {
        flex-basis: 46.99%;
    }
    .tile:nth-child(2n-2) {
        margin-left: 2%;
    }
    .tile:nth-child(2n-1) {
        margin-right: 2%;
    }
}

@media screen and (min-width: 900px) {
    .tile {
        flex-basis: 31%;
    }
    .tile:nth-child(3n-1) {
        margin-left: 3%;
        margin-right: 3%;
    }
}

html[data-useragent*='MSIE 10.0'] .flex-container .tile {
    flex-basis: 31%;
    margin: 3%;
}

.tile-no-border {
    border: 0;
}

.tile .tile-body {
    border-bottom: 0px;
    padding: 12px;
}

.tile .tile-body *:last-child {
    margin-bottom: 0;
}

.govuk-back-link {
    display: none;
}
.js-enabled .govuk-back-link {
    display: inline-block;
}

.text-overflow {
    word-wrap: break-word; /* old version of overflow-wrap for IE and Edge and FF < 49*/
    overflow-wrap: anywhere; /* modern, tries to fit word on a new line rather than fitting on remnants of the current line */
}

th.return-period-column {
    width: 45%;
}

th.amount-left-column {
    width: 30%;
}

th.payment-column {
    width: 25%;
}

td.oss-to-country {
    width: 30%;
}

td.oss-vat-rate {
    width: 20%;
    text-align: right;
}

td.oss-sales-excluding-vat {
    width: 35%;
    text-align: right;
}

td.oss-vat {
    width: 15%;
    text-align: right;
}

.red-background {
    background-color: #d4351c;
}

/*Ensure the down arrow for 'show all' option sits above the input so it is visible
(there was a change - possibly either input or page background which effectively hid the arrow due to its z-index)*/
.autocomplete__dropdown-arrow-down {
    z-index: 0;
    pointer-events: none;
}

.corrections-no-border {
    border: 0;
}

.width-auto {
    width: auto;
}

